# Trial-Submission-Studio

./: .gitattributes  .gitignore  .gitmodules  .mcp.json  .zenodo.json  AGENTS.md  AUTHORS  CITATION.cff  CLAUDE.md  CLI_MODULARIZATION_COMPLETE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  CORE_REFACTORING_PLAN.md  Cargo.toml  DEEP_ANALYSIS_AND_ROADMAP.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_STATUS.md  MIGRATION.md  MIGRATION_GUIDE_XPT.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE2_PROGRESS.md  PHASE_3_ASSESSMENT.md  PHASE_3_COMPLETE.md  PHASE_3_IMPLEMENTATION.md  PHASE_3_READY.md  PHASE_3_STEPS_4_5.md  PHASE_4_COMPLETE.md  PHASE_4_IMPLEMENTATION_COMPLETE.md  PHASE_4_STATUS.md  PHASE_4_XPT_REFACTORING.md  README.md  README_REFACTORING.md  REFACTORING_PLAN.md  ROADMAP.md  SDTM_CT_relationships.md  SECURITY.md  TEST_COVERAGE_REPORT.md  TEST_INTEGRATION_REPORT.md  THIRD_PARTY_LICENSES.md  (+20 more)
crates/cdisc-gui/: Cargo.toml
crates/cdisc-gui/src/: app.rs  lib.rs  main.rs  menu.rs
crates/cdisc-gui/src/export/: gating.rs  mod.rs  supp.rs  types.rs  (+1 more)
crates/cdisc-ingest/: Cargo.toml
crates/cdisc-ingest/src/: discovery.rs  hints.rs  lib.rs
crates/cdisc-map/: Cargo.toml
crates/cdisc-map/src/: error.rs  lib.rs  score.rs  state.rs
crates/cdisc-output/: Cargo.toml
crates/cdisc-output/src/: common.rs  dataset_xml.rs  define_xml.rs  lib.rs  sas.rs  types.rs  xpt.rs
crates/cdisc-standards/: Cargo.toml
crates/cdisc-standards/src/: adam_ig.rs  ct.rs  error.rs  lib.rs  paths.rs  registry.rs  sdtm_ig.rs  send_ig.rs
crates/cdisc-transform/: Cargo.toml
crates/cdisc-transform/src/: error.rs  executor.rs  inference.rs  lib.rs  preview.rs  types.rs
crates/cdisc-validate/: Cargo.toml
crates/cdisc-validate/src/: issue.rs  lib.rs  report.rs  util.rs
crates/sdtm-cli/: Cargo.toml
crates/sdtm-cli/src/: cli.rs  commands.rs  ct_utils.rs  dedupe.rs  lib.rs  logging.rs  main.rs  pipeline.rs  summary.rs  types.rs  wide.rs
crates/sdtm-cli/tests/: pipeline.rs
crates/sdtm-core/: Cargo.toml
crates/sdtm-core/src/: ct_utils.rs  data_utils.rs  datetime.rs  dedupe.rs  domain_sets.rs  domain_utils.rs  frame.rs  frame_builder.rs  frame_utils.rs  lib.rs  pipeline.rs  pipeline_context.rs  preprocess.rs  processing_context.rs  processor.rs  provenance.rs  relationships.rs  study_pipeline_context.rs  suppqual.rs  text_utils.rs  transforms.rs  wide.rs
crates/sdtm-core/tests/: base_rules.rs  datetime.rs  domain_processing.rs  domain_processor_registry.rs  domain_utils.rs  frame.rs  mockdata_processing.rs  pipeline.rs  relationships.rs  suppqual.rs
crates/sdtm-gui/: Cargo.toml
crates/sdtm-gui/src/: app.rs  lib.rs  main.rs  menu.rs  theme.rs
crates/sdtm-gui/tests/: mapping.rs
crates/sdtm-ingest/: Cargo.toml
crates/sdtm-ingest/src/: csv_ingest.rs  csv_table.rs  discovery.rs  hints.rs  lib.rs  metadata.rs  polars_utils.rs  streaming.rs  study_metadata.rs
crates/sdtm-ingest/tests/: csv_table.rs  csv_table_unit.rs  discovery.rs  streaming.rs
crates/sdtm-map/: Cargo.toml
crates/sdtm-map/src/: engine.rs  error.rs  lib.rs  patterns.rs  repository.rs  score.rs  state.rs  utils.rs
crates/sdtm-map/tests/: engine.rs  repository.rs
crates/sdtm-output/: Cargo.toml
crates/sdtm-output/src/: common.rs  dataset_xml.rs  define_xml.rs  lib.rs  sas.rs  types.rs  xpt.rs
crates/sdtm-output/tests/: common.rs  sas.rs
crates/sdtm-report/: Cargo.toml
crates/sdtm-report/src/: common.rs  dataset_xml.rs  define_xml.rs  lib.rs  sas.rs  xpt.rs
crates/sdtm-report/tests/: sas_program.rs
crates/sdtm-standards/: Cargo.toml
crates/sdtm-standards/src/: csv_utils.rs  ct.rs  ct_loader.rs  doctor.rs  error.rs  hash.rs  lib.rs  loaders.rs  manifest.rs  p21_loader.rs  paths.rs  registry.rs  sdtm_ig.rs  xsl.rs
crates/sdtm-standards/tests/: assumptions.rs  ct_loader.rs  doctor_snapshot.rs  loaders.rs  p21_loader.rs  xsl.rs
crates/sdtm-transform/: Cargo.toml
crates/sdtm-transform/src/: context.rs  data_utils.rs  datetime.rs  domain_sets.rs  executor.rs  executors.rs  frame.rs  frame_builder.rs  inference.rs  lib.rs  pipeline.rs  preview.rs  relationships.rs  suppqual.rs  transforms.rs  types.rs
crates/sdtm-transform/tests/: ct.rs  data_utils.rs  datetime.rs  transforms.rs
crates/sdtm-validate/: Cargo.toml
crates/sdtm-validate/src/: cross_domain.rs  engine.rs  issue.rs  lib.rs  lookup.rs  p21.rs  p21_loader.rs  rule_mapping.rs  types.rs  util.rs  validator.rs
crates/sdtm-validate/tests/: cross_domain.rs  p21_rules.rs  standards_smoke.rs  validate.rs  validate_unit.rs
crates/sdtm-xpt/: Cargo.toml
crates/sdtm-xpt/src/: error.rs  lib.rs  polars_ext.rs  reader.rs  validate.rs  version.rs  writer.rs
crates/sdtm-xpt/tests/: read_lb_xpt.rs  roundtrip.rs  v5_roundtrip.rs  v8_roundtrip.rs  xpt.rs
crates/tss-gui/: Cargo.toml  build.rs  rewrite-gui-to-iced.md
crates/tss-gui/docs/: 01-architecture.md  02-message-patterns.md  03-state-management.md  04-component-guide.md  05-theming.md
crates/tss-gui/src/: app.rs  constants.rs  error.rs  lib.rs  main.rs  menu.rs  util.rs
crates/tss-ingest/: Cargo.toml
crates/tss-ingest/src/: discovery.rs  error.rs  hints.rs  lib.rs
crates/tss-map/: Cargo.toml
crates/tss-map/src/: error.rs  lib.rs  score.rs  state.rs
crates/tss-model/: Cargo.toml
crates/tss-model/src/: ct.rs  lib.rs  polars.rs
crates/tss-output/: Cargo.toml
crates/tss-output/src/: common.rs  dataset_xml.rs  define_xml.rs  types.rs  xpt.rs
crates/tss-persistence/: Cargo.toml
crates/tss-persistence/src/: convert.rs  error.rs  lib.rs
crates/tss-standards/: Cargo.toml
crates/tss-standards/src/: adam_ig.rs  ct.rs  embedded.rs  error.rs  lib.rs  paths.rs  polars.rs  registry.rs  sdtm_ig.rs  send_ig.rs  traits.rs
crates/tss-submit/: Cargo.toml
crates/tss-submit/src/: error.rs  lib.rs
crates/tss-transform/: Cargo.toml
crates/tss-transform/src/: executor.rs  inference.rs  lib.rs  preview.rs  types.rs
crates/tss-updater-helper/: Cargo.toml
crates/tss-updater-helper/src/: config.rs  launch.rs  log.rs  main.rs  quarantine.rs  signature.rs  status.rs  swap.rs
(+1325 files in other folders)
