[workspace]
members = [
    "crates/tss-gui",
    "crates/tss-ingest",
    "crates/tss-persistence",
    "crates/tss-standards",
    "crates/tss-submit",
    "crates/tss-updater",
    "crates/tss-updater-helper",
]
resolver = "3"

[workspace.package]
version = "0.0.3-alpha"
edition = "2024"
rust-version = "1.92"
license = "MIT"
readme = "README.md"
exclude = ["resources/"]


[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.4.0"
futures-util = "0.3"
hex = "0.4.3"
polars = { version = "0.51.0", features = [
    "lazy",
    "csv",
    "strings",
    "range",
    "dtype-array",
] }
quick-xml = "0.39"
rkyv = { version = "0.8", default-features = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.24"
thiserror = "2.0"
tokio = { version = ">=1.23.1", features = ["rt-multi-thread", "sync", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
xportrs = "0.0.8"

[workspace.lints.rust]
# Safety and correctness
unsafe_code = "warn"
# missing_docs = "warn"

[workspace.lints.clippy]
# Correctness
enum_glob_use = "warn"
wildcard_imports = "warn"

# Style
needless_pass_by_value = "warn"
cloned_instead_of_copied = "warn"
redundant_closure_for_method_calls = "warn"

# Performance
inefficient_to_string = "warn"

# Pedantic (useful but noisy - enable selectively)
# must_use_candidate = "warn"
# missing_panics_doc = "warn"

[profile.dev]
debug = 1
