[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdisc-transpiler"
version = "0.0.1"
description = "CLI tool that converts CDISC SDTM source data to SAS v5 code."
readme = "README.md"
authors = [{ name = "Ruben Talstra" }]
requires-python = ">=3.12"
dependencies = [
    "click==8.3.1",
    "rich==14.2.0",
    "pandas==2.3.3",
    "pandas-stubs==2.3.3.251201",
    "openpyxl==3.1.5",
    "pyreadstat==1.3.2",
    "jinja2==3.1.6",
    "rapidfuzz==3.14.3",
    "pydantic==2.12.5",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pyflakes==3.4.0",
    "Pylint==4.0.4",
    "pyright==1.1.407",
    "pytest-benchmark==5.2.3",
]

[project.scripts]
cdisc-transpiler = "cdisc_transpiler.cli:app"

[tool.setuptools.packages.find]
include = ["cdisc_transpiler*"]

[tool.pyright]
include = ["cdisc_transpiler"]
exclude = [
    "**/__pycache__",
    ".venv",
    "build",
    "dist",
    "cdisc_transpiler.egg-info",
]
pythonVersion = "3.12"
typeCheckingMode = "standard"
useLibraryCodeForTypes = true
reportMissingImports = "error"
reportMissingTypeStubs = true
reportUnusedFunction = true

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (use real file system)",
    "slow: marks tests as slow (process larger datasets)",
    "benchmark: marks tests as performance benchmarks (use pytest-benchmark)",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
