[package]
name = "cdisc-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "CDISC Data Transpiler - Desktop GUI Application"
default-run = "cdisc-gui"

[lib]
name = "cdisc_gui"
path = "src/lib.rs"

[[bin]]
name = "cdisc-gui"
path = "src/main.rs"

[dependencies]
# GUI framework
eframe = "0.33.3"
egui = "0.33.3"
egui_extras = { version = "0.33.3", features = ["all_loaders"] }

# Workspace dependencies
cdisc-common = { path = "../cdisc-common" }
cdisc-model = { path = "../cdisc-model" }
cdisc-standards = { path = "../cdisc-standards" }
cdisc-ingest = { path = "../cdisc-ingest" }
cdisc-map = { path = "../cdisc-map" }
cdisc-transform = { path = "../cdisc-transform" }
cdisc-validate = { path = "../cdisc-validate" }
cdisc-output = { path = "../cdisc-output" }
cdisc-xpt = { path = "../cdisc-xpt" }

# Common dependencies
anyhow.workspace = true
polars.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true

# GUI-specific
rfd = "0.16.0"           # Native file dialogs
lru = "0.16.2"           # LRU cache
egui-phosphor = "0.11.0" # Icon set

# Settings & menu
directories = "6.0"      # Cross-platform app directories
toml = "0.9.8"           # Config file format
muda = "0.17.1"          # Native menu bar (by Tauri team)
crossbeam-channel = "0.5.15" # For muda menu events

# Platform-specific
[target.'cfg(target_os = "macos")'.dependencies]
winit = "0.30.12"        # Needed for EventLoopBuilderExtMacOS trait

[lints]
workspace = true
