[package]
name = "cdisc-ingest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "CDISC data ingestion: CSV loading, metadata handling, and domain discovery"

[lints]
workspace = true

[dependencies]
polars.workspace = true
cdisc-common = { path = "../cdisc-common" }
cdisc-map = { path = "../cdisc-map" }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
