[package]
name = "cdisc-validate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "CDISC conformance validation for SDTM, ADaM, and SEND"

[lints]
workspace = true

[dependencies]
csv.workspace = true
polars.workspace = true
regex = "1.11"
cdisc-common = { path = "../cdisc-common" }
cdisc-model = { path = "../cdisc-model" }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
cdisc-standards = { path = "../cdisc-standards" }
