[package]
name = "sdtm-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "sdtm"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
csv.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

sdtm-core = { path = "../sdtm-core" }
sdtm-standards = { path = "../sdtm-standards" }
sdtm-ingest = { path = "../sdtm-ingest" }
sdtm-map = { path = "../sdtm-map" }
sdtm-model = { path = "../sdtm-model" }
sdtm-validate = { path = "../sdtm-validate" }
