[package]
name = "sdtm-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
polars.workspace = true
sdtm-ingest = { path = "../sdtm-ingest" }
sdtm-model = { path = "../sdtm-model" }

[dev-dependencies]
sdtm-standards = { path = "../sdtm-standards" }
