[package]
name = "sdtm-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
polars.workspace = true
sdtm-ingest = { path = "../sdtm-ingest" }
sdtm-model = { path = "../sdtm-model" }
sdtm-map = { path = "../sdtm-map" }
sdtm-transform = { path = "../sdtm-transform" }
tracing.workspace = true

[dev-dependencies]
