[package]
name = "sdtm-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "CDISC SDTM Transpiler - Desktop GUI Application"
default-run = "sdtm-gui"

[lib]
name = "sdtm_gui"
path = "src/lib.rs"

[[bin]]
name = "sdtm-gui"
path = "src/main.rs"

[dependencies]
# GUI framework
eframe = "0.33.3"
egui = "0.33.3"
egui_extras = { version = "0.33.3", features = ["all_loaders"] }

# Workspace dependencies
sdtm-common = { path = "../sdtm-common" }
sdtm-model = { path = "../sdtm-model" }
sdtm-standards = { path = "../sdtm-standards" }
sdtm-ingest = { path = "../sdtm-ingest" }
sdtm-map = { path = "../sdtm-map" }
sdtm-transform = { path = "../sdtm-transform" }
sdtm-validate = { path = "../sdtm-validate" }
# sdtm-output = { path = "../sdtm-output" }  # TODO: Wire up when export is implemented

# Common dependencies
anyhow.workspace = true
polars.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true

# GUI-specific
rfd = "0.16.0"           # Native file dialogs
lru = "0.16.2"           # LRU cache
egui-phosphor = "0.11.0" # Icon set

# Settings & menu
directories = "6.0"      # Cross-platform app directories
toml = "0.9.8"           # Config file format
muda = "0.17.1"          # Native menu bar (by Tauri team)
crossbeam-channel = "0.5" # For muda menu events

# Platform-specific
[target.'cfg(target_os = "macos")'.dependencies]
winit = "0.30.12"        # Needed for EventLoopBuilderExtMacOS trait

[lints]
workspace = true
