[package]
name = "sdtm-ingest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
csv.workspace = true
polars.workspace = true
serde.workspace = true
tracing.workspace = true
sdtm-model = { path = "../sdtm-model" }

[dev-dependencies]
serde_json.workspace = true
