[package]
name = "sdtm-ingest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
polars.workspace = true
sdtm-map = { path = "../sdtm-map" }
serde = { workspace = true, features = ["derive"] }
tracing.workspace = true
