[package]
name = "sdtm-map"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
rapidfuzz = "0.5.0"
serde.workspace = true
serde_json.workspace = true
sdtm-model = { path = "../sdtm-model" }

[dev-dependencies]
sdtm-standards = { path = "../sdtm-standards" }
