[package]
name = "sdtm-output"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "SDTM output generation: XPT, Dataset-XML, Define-XML, SAS"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
polars.workspace = true
quick-xml.workspace = true
sdtm-common = { path = "../sdtm-common" }
sdtm-model = { path = "../sdtm-model" }
sdtm-map = { path = "../sdtm-map" }
sdtm-xpt = { path = "../sdtm-xpt" }
sdtm-standards = { path = "../sdtm-standards" }
