[package]
name = "sdtm-report"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
polars.workspace = true
quick-xml.workspace = true
sdtm-core = { path = "../sdtm-core" }
sdtm-ingest = { path = "../sdtm-ingest" }
sdtm-model = { path = "../sdtm-model" }
sdtm-transform = { path = "../sdtm-transform" }
sdtm-xpt = { path = "../sdtm-xpt" }
sdtm-standards = { path = "../sdtm-standards" }

[dev-dependencies]
insta.workspace = true
