[package]
name = "sdtm-standards"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
csv.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
insta.workspace = true
