[package]
name = "sdtm-transform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "SDTM data transformation: datetime, CT, units, and structural compliance"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
polars.workspace = true
serde.workspace = true
sdtm-ingest = { path = "../sdtm-ingest" }
sdtm-map = { path = "../sdtm-map" }
sdtm-model = { path = "../sdtm-model" }

[dev-dependencies]
