[package]
name = "sdtm-transform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Data-driven, variable-level transformation system for SDTM domains"

[lints]
workspace = true

[dependencies]
# Workspace crates
sdtm-common = { path = "../sdtm-common" }
sdtm-model = { path = "../sdtm-model" }

# Core dependencies
chrono.workspace = true
polars.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
insta.workspace = true
