[package]
name = "sdtm-validate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
polars.workspace = true
sdtm-core = { path = "../sdtm-core" }
sdtm-ingest = { path = "../sdtm-ingest" }
sdtm-model = { path = "../sdtm-model" }
sdtm-standards = { path = "../sdtm-standards" }
