[package]
name = "sdtm-validate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
csv.workspace = true
polars.workspace = true
regex = "1.11"
sdtm-ingest = { path = "../sdtm-ingest" }
sdtm-model = { path = "../sdtm-model" }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
sdtm-standards = { path = "../sdtm-standards" }
