[package]
name = "sdtm-xpt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "SAS Transport (XPT) V5 format reader and writer"

[lints]
workspace = true

[features]
default = []
polars = ["dep:polars"]

[dependencies]
thiserror.workspace = true
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
polars = { workspace = true, optional = true }

[dev-dependencies]
proptest.workspace = true
tempfile = "3"
