[package]
name = "tss-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Trial Submission Studio - Desktop GUI Application"
default-run = "trial-submission-studio"

[lib]
name = "tss_gui"
path = "src/lib.rs"

[[bin]]
name = "trial-submission-studio"
path = "src/main.rs"

[dependencies]
# Workspace dependencies (alphabetical)
chrono.workspace = true
futures-util.workspace = true
polars.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
xportrs.workspace = true

# External dependencies (alphabetical)
directories = "6.0"
# Iced GUI framework
# NOTE: Iced 0.14.0 uses builder pattern: iced::application(new, update, view).run()
# Feature flags:
#   - tokio:    Async runtime for Task::perform, Task::sip (preview, export, updates)
#   - image:    Image loading with codecs (PNG icons, potential charts)
#   - svg:      SVG rendering for vector icons/graphics
#   - markdown: Markdown widget (replaces egui_commonmark for changelogs/licenses)
#   - lazy:     Lazy widget rendering (performance optimization)
#   - advanced: Advanced widget capabilities
iced = { version = "0.14.0", features = [
    "tokio",
    "image",
    "svg",
    "markdown",
    "lazy",
    "advanced",
] }
iced_fonts = { version = "0.3.0", features = ["lucide"] }
image = { version = "0.25", features = ["png", "ico"] }
open = "5.3"
rfd = "0.17"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
toml = "0.9"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Path dependencies (alphabetical)
tss-ingest = { path = "../tss-ingest" }
tss-standards = { path = "../tss-standards" }
tss-submit = { path = "../tss-submit" }
tss-updater = { path = "../tss-updater" }

# Platform-specific: macOS native menu bar
[target.'cfg(target_os = "macos")'.dependencies]
muda = "0.17.1"

# Platform-specific: Windows resource compilation
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[lints]
workspace = true
